--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <body>
   <nav>
     <div class="logo"></div>
-    <img src="images/Untitled design (9).png" style="height: 100%;">
+    <img src="Untitled design (9).png" style="height: 100%;">
     <ul>
       <li onclick="scrollToSection('calendar')">Calendar</li>
       <li onclick="scrollToSection('upload-form')">Upload Poster</li>
@@ -241,7 +241,7 @@
 
   <a href="https://wa.me/254114318112?text=Hi%20I%20have%20a%20suggestion%20about%20the%20poster!" id="whatsapp-btn" target="_blank" rel="noopener noreferrer">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
-    Chat with us
+    Submit your Comment
   </a>
 
   <script>
